# resume-v2.1

./: .replit  README.md  app.py  database.py  forms.py  pyproject.toml  requirements.txt
templates/: base.html  code.html  cv.html  index.html  register.html
