[tool.poetry]
name = "repl_nix_resume-v21"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
Flask-WTF = "^1.1.1"
WTForms = "^3.0.1"
Flask-Uploads = "^0.2.1"
SQLAlchemy = "^2.0.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
